--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     }
     */
     // Condicional Ternario
+    
+    
+
     var edad = prompt("Edad ?");
     edad >= 18 ? alert("Mayor de Edad") : alert("Es menor de Edad"); 
     //  Ciclo For
@@ -72,3 +75,5 @@
     alert("valor " + numero + "<br>" + "Magno ");
 
 </script>
+
+<h1> hola mundo</h1>
